--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,5 +12,5 @@ jobs:
       - run: |
           docker buildx build --push \
             --build-arg CI_NAME=circleci \
-            --platform linux/arm/v7,linux/arm64/v8,linux/386,linux/amd64 \
+            --platform linux/amd64,linux/arm/v7,linux/arm64/v8,linux/arm/v6,linux/ppc64le,linux/s390x,linux/riscv64 \
             --tag jdrouet/docker-on-ci:circleci .
